Fix empty subtitle + remove arrows + remove dark mode

--- a/fluency-in-care.css
+++ b/fluency-in-care.css
@@ -68,13 +68,6 @@
     }
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground: var(--light);
-        --background: var(--dark);
-    }
-}
-
 * {
     box-sizing: border-box;
 
